# dft-fft

./: .gitignore  CMakeLists.txt  dft_hello.c  dft_main.c  dft_test  shell.nix
include/: dft.h  dft_hello.h
src/: dft.c  dft_hello.c
test/: dft_test.c
